% Links to vignettes 20220723
\newcommand{\viglink}{\ifelse{html}{\out{<a href="../CHNOSZ/doc/#1.html"><strong>#1.Rmd</strong></a>}}{\bold{#1.Rmd}}}
% Heat capacity and standard Gibbs energy 20231115
\newcommand{\Cp}{\ifelse{latex}{\eqn{C_P}}{\ifelse{html}{\out{<I>C<sub>P</sub></I>}}{Cp}}}
\newcommand{\DG0}{\ifelse{latex}{\eqn{{\Delta}G^{\circ}}}{\ifelse{html}{\out{&Delta;<I>G</I>&deg;}}{ΔG°}}}

\section{Changes in CHNOSZ version 2.1.0-65 (2025-05-10)}{

  \subsection{OBIGT DEFAULT DATA}{
    \itemize{

      \item Add aqueous uranyl complexes from
      \href{https://doi.org/10.1016/j.gca.2024.04.023}{Migdisov et al. (2024)}
      and related U-bearing minerals from
      \href{https://doi.org/10.1787/bf86a907-en}{Grenthe et al. (2020)}.

      \item For compatibility with the above change, aqueous uranium species
      other than HUO\s{4}\S{-} from
      \href{https://doi.org/10.1016/S0016-7037(97)00240-8}{Shock et al. (1997)}
      have been moved to optional data (\file{SLOP98.csv}).

      \item Add alkylamines, benzylamines, and aminiums from
      \href{https://doi.org/10.1016/j.gca.2024.03.013}{Robinson et al. (2024)}.

      \item Add tantalum species from
      \href{https://doi.org/10.1016/j.gca.2024.10.019}{Hu et al. (2024)}.

      \item Add Pd(HS)\s{4}\S{-2} and Pt(HS)\s{4}\S{-2} from
      \href{https://doi.org/10.1016/j.gca.2024.12.019}{Laskar et al. (2024)}.

      \item Add Sn chloride complexes and updated parameters for Sn\S{+2} and
      Th\S{+4} from \href{https://doi.org/10.1016/j.gsf.2023.101624}{Liu et al.
        (2023)}.

      \item Move americium complexes from \file{SLOP98.csv} back to
      \file{inorganic_aq.csv} (entropy of the element Am has been available for
      checking GHS self-consistency since version 1.4.0).

      \item \file{inorganic_cr.csv}: Add cerianite (CeO\s{2}), chromite
      (FeCr\s{2}O\s{4}), and cassiterite (SnO\s{2}) from
      \href{https://doi.org/10.3133/b2131}{Robie and Hemingway (1995)}.
